tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_cli_flags_r_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - cli
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::*
crate::cli::overview::generate_after_help
crate::cli::validation::*
crate::cli::validation::{validate_depth, validate_module_path}
crawk::version
crawk::version::LONG_VERSION_MESSAGE
crawk::version::VERSION

----- stderr -----
