tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_cli_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - cli
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CheckArgs
crate::cli::CheckOutputFormat
crate::cli::CrawkArgs
crate::cli::CrawkCommands
crate::cli::CrawkOptions
crate::cli::CyclesMode
crate::cli::DepsArgs
crate::cli::DepsOutputFormat
crate::cli::ListArgs
crate::cli::ListDisplayArgs
crate::cli::ListOutputFormat
crate::cli::UseArgs
crate::cli::UseOutputFormat
crate::cli::WhyArgs
crate::cli::WhyOutputFormat
crate::cli::overview::generate_after_help
crate::cli::validation::validate_depth
crate::cli::validation::validate_module_path
crawk::version
crawk::version::LONG_VERSION_MESSAGE
crawk::version::VERSION

----- stderr -----
